Fix database config: sqlite locally, DATABASE_URL in production

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,10 +2,12 @@
 Django==6.0
 djangorestframework
 django-cors-headers
+djangorestframework-simplejwt
 
 # Env & HTTP
 python-dotenv
 requests
+groq
 
 # RAG / embeddings
 langchain
